feat: Integrate MarkdownIt and update theme styling
Replaces the `marked` library with `markdown-it` for improved Markdown rendering capabilities.

Introduces basic light and dark mode background styling to the `index.html` for a more refined user experience.

Updates the `types.ts` file to include additional properties for `User` and `Activity`, enhancing data structure for future features.

Removes unused constants related to gamification elements (crown, points, level up, achievements) from `constants.tsx`, streamlining the configuration.

Also refactors the `Header` component to use a more generic `ViewType` for navigation and cleans up imports and type definitions throughout the application.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "@google/genai": "^1.27.0",
-    "marked": "^16.4.1"
+    "marked": "^16.4.1",
+    "markdown-it": "^14.1.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
